Refactor and remove unused imports
- Prefer using interfaces where possible according to best practices:
   - Replace LinkedList with List
   - Replace Stack with Deque and use ArrayDeque instead of Stack